# superhuman-registry

./: Dockerfile  Makefile  README.md  docker-compose.yml  sr.cabal  stack.yaml
layout-exe/: Main.hs
sqitch/: Dockerfile.pg  initdb.sh  sqitch.plan
sqitch/deploy/: appschema.sql  blob-uploads.sql  blobs.sql  uuid-ossp.sql
sqitch/revert/: appschema.sql  blob-uploads.sql  blobs.sql  uuid-ossp.sql
sqitch/verify/: appschema.sql  blob-uploads.sql  blobs.sql  uuid-ossp.sql
src/: Backend.hs  Config.hs  Env.hs  Heartbeat.hs  Initialization.hs  Lib.hs  Logging.hs  Types.hs  Utils.hs
src/Backend/: Types.hs
src/SR/: Blobs.hs  HashedJSONContentType.hs  Health.hs  Links.hs  Metadata.hs  Routes.hs  Types.hs
src/SR/Storage/: Types.hs
test/: Spec.hs  manifest-v2-hello-world.json
utils/proxy/: index.js  package.json
