name:                sr
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/christopherbiscardi/sr#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Biscardi
maintainer:          chris@christopherbiscardi.com
copyright:           Chris Biscardi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Config
                     , Heartbeat
                     , Initialization
                     , Utils
                     , Logging
                     , SR.Routes
                     , SR.Types
                     , SR.Blobs
                     , SR.Metadata
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , wai-middleware-prometheus >= 0.1.0.1
                     , prometheus-client >= 0.1.0.1
                     , prometheus-metrics-ghc >= 0.1.0.1
                     , mtl >= 2.2.1
                     , postgresql-simple >= 0.5.1.2
                     , unordered-containers
                     , time
                     , text
                     , transformers
                     , monad-control
                     , unix
                     , bytestring
                     , resource-pool
                     , katip
  default-language:    Haskell2010

executable sr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sr
  default-language:    Haskell2010

test-suite sr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/christopherbiscardi/sr
