name:                sr
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/christopherbiscardi/sr#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Biscardi
maintainer:          chris@christopherbiscardi.com
copyright:           Chris Biscardi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Backend
                     , Config
                     , Env
                     , Initialization
                     , Logging
                     , Types
                     , Utils
                     , SR.Blobs
                     , SR.HashedJSONContentType
                     , SR.Health
                     , SR.Metadata
                     , SR.Routes
                     , SR.Storage.Types
                     , SR.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , bytestring-conversion
                     , contravariant
                     , contravariant-extras
                     , cryptonite
                     , envy
                     , hasql
                     , hasql-lo
                     , hasql-pool
                     , hasql-transaction
                     , hasql-th
                     , http-api-data
                     , http-media
                     , katip
                     , monad-control
                     , mtl >= 2.2.1
                     , network-uri
                     , parsers
                     , postgresql-simple >= 0.5.1.2
                     , prometheus-client >= 0.1.0.1
                     , prometheus-metrics-ghc >= 0.1.0.1
                     , resource-pool
                     , servant
                     , servant-server
                     , text
                     , time
                     , transformers
                     , trifecta
                     , unix
                     , unordered-containers
                     , uuid
                     , wai
                     , wai-extra
                     , wai-middleware-prometheus >= 0.1.0.1
                     , warp
  default-language:    Haskell2010

executable sr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sr
  default-language:    Haskell2010

executable sr-layout-exe
  hs-source-dirs:      layout-exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sr
                     , servant-server
                     , text
  default-language:    Haskell2010

test-suite sr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sr
                     , hspec
                     , bytestring
                     , aeson
                     , cryptonite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/christopherbiscardi/sr
